--- a/static/style.css
+++ b/static/style.css
@@ -1,40 +1,120 @@
-/* page toolbar */
+@font-face{
+    font-family: "TitilliumWeb-Regular";
+    src: url("fonts/TitilliumWeb-Regular.ttf")
+}
+
+@font-face{
+    font-family: "TitilliumWeb-SemiBold";
+    src: url("fonts/TitilliumWeb-SemiBold.ttf")
+}
+
+@font-face{
+    font-family: "TitilliumWeb-Light";
+    src: url("fonts/TitilliumWeb-Light.ttf")
+}
+
+@font-face{
+    font-family: "TitilliumWeb-Bold";
+    src: url("fonts/TitilliumWeb-Bold.ttf")
+}
 
 body{
     overflow-x: hidden;
 }
 
-body .toolbar {
-    background: black;
-    height: 50px;
-    width: 100%;
-    position: fixed;
-    z-index: 2;
-    text-align: right;
+body .main_div{
+    height:100vh;
+    width: 100vw;
+    background: linear-gradient(0deg, rgb(155, 108, 108) 0%, rgba(0,0,0,1) 100%);
+
 }
 
-body .toolbar p{
-    color: white;
-    float: right;
-    margin-right: 76px;
-    margin-top: 12px;
-    user-select: none;
-    font-family: 'Helvetica';
+body .main_div .toolbar{
+    position: relative;
+    height:20%;
+    width: 100%;
+    font-family: "TitilliumWeb-Regular";
+    transform: translatey(-200px);
+    z-index: 3;
+    background-color: rgba(0, 0, 0, 0);
 }
+
+body .main_div .toolbar .logo_button{
+    position: absolute;
+    top:30%;
+    height: 40%;
+    width: 130px;
+    background-image: url("images/asm_light.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    left: 5%;
+}
+
+body .main_div .toolbar .links{
+    position: absolute;
+    top:25%;
+    height: 50%;
+    width: 600px;
+    right: 5%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+body .main_div .toolbar .links > div:nth-child(1), body .main_div .toolbar .links > div:nth-child(3){
+    width:33%;
+    height: 100%;
+}
+
+body .main_div .toolbar .links > div:nth-child(2){
+    width:34%;
+    height: 100%;
+}
+
+body .main_div .toolbar .links div{
+    text-align: right;
+    font-size: 20pt;
+}
+
+body .main_div .toolbar .links a{
+    text-decoration: none;
+    color: white;
+}
+
+body .main_div .toolbar .links a:hover{
+    text-decoration: none;
+    color: grey;
+}
+
+body .main_div .toolbar .links p{
+    position: relative;
+    top:10%;
+}
+
+body .main_div .toolbar .links button{
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+    border: none;
+}
+
+body .main_div .toolbar .links button:hover{
+    color: grey;
+}
+
 /* page toolbar formatting and styling along 
  * with the cyan and white dropdown button 
  */
 
-body .drop_div{
+ body .drop_div{
     position: fixed;
+    z-index: 2;
     width: 100vw;
-    height: calc(100% - 50px);
-    top: 50px;
-    background-color: black;
+    height: 100%;
+    top: 0px;
     display: flex;
     justify-content: space-evenly;
-    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(7,42,48,1) 35%, rgba(0,64,122,1) 100%);
+    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(54, 0, 0, 1) 100%);
     transform: translatey(-100%);
+    opacity: 0;
 }
 
 body .drop_div > div:nth-child(1), body .drop_div > div:nth-child(3){
@@ -92,33 +172,26 @@ body .li2, .gh2, .email2{
     height: 100%;
 }
 
-body .li a:hover{
-    background-color: rgb(0, 36, 36);
-    width:100%;
-    height:100%;
-    transition: ease .3s;
-}
-
-body .gh a:hover{
-    background-color: rgb(0, 36, 36);
+body .li a:hover, .gh a:hover{
+    background-color: #360000;
     width:100%;
     height:100%;
     transition: ease .3s;
 }
 
 body .email a:hover{
-    background-color: rgb(0, 36, 36);
+    background-color: #360000;
     width:100%;
     height:53%;
     transition: ease .3s;
 }
 
 body .gh{
-    height: calc(23.8vw);
+    height: 23.8vw;
 }
 
 body .li, .email{
-    height: calc(22.4vw);
+    height: 22.4vw;
 }
 
 body .li{
@@ -138,8 +211,8 @@ body .dropdown {
 
 body .dropdown {
     position: absolute;
-    top: 12px;
-    right: 24px;
+    top: 56px;
+    right: 80px;
     height:40px;
 }
 
@@ -155,7 +228,7 @@ body .dropdown > div{
 }
 
 body .dropdown > div:nth-child(1){
-    background-color: #00FFFF;
+    background-color: #D4AF37;
 }
 
 
@@ -200,355 +273,412 @@ body .toolbar .dropdown .btn:focus{
 body .wrapper{
     overflow: hidden;
     width: 100vw;
-    height: 100vh;
+    height: 80%;
     position: absolute;
+    z-index: 2;
+}
+/* bg logo */
+body .logo_wrapper{
+    position: absolute;
+    width: 32%;
+    margin-left: 15%;
+    height: 35vw;
+    overflow-x: hidden;
+}
+
+
+body .logo_bg_a, .logo_bg_ma, .logo_bg_mb, .logo_bg_s{
+    background-color: rgb(56, 30, 30);
+}
+
+body .logo_bg_a{
+    position: absolute;
+    width: 27vw;
+    height: 27vw;
+    margin-left: 15%;
+    margin-top: 4%;
+    z-index: 1;
+    clip-path: polygon(50% 0, 100% 100%, 85% 100%, 50% 20%, 15% 100%, 0 100%);
+    opacity: 0;
+}
+
+body .logo_bg_ma, body .logo_bg_mb{
+    position: absolute;
+    width: 27vw;
+    height: 27vw;
+    margin-left: 48.5%;
+    margin-top: 4%;
+    z-index: 1;
+    opacity: 0;
+}
+
+body .logo_bg_ma{
+    clip-path: polygon(50% 0, 100% 100%, 85% 100%, 50% 20%, 15% 100%, 0 100%);
+}
+
+body .logo_bg_mb{
+    clip-path: polygon(50% 0, 100% 100%, 85% 100%, 50% 20%, 15% 100%, 0 100%);
+    margin-left: 60.5%;
+}
+
+
+body .logo_bg_s{
+    position: absolute;
+    width:73vw;
+    height:100%;
+    clip-path: polygon(39% 0, 100% 0, 100% 10%, 44% 10%, 44% 100%, 0 100%, 0 90%, 39% 90%);
+    opacity: 0;
+}
+
+body .logo_conceal{
+    position: absolute;
+    width: 34vw;
+    height: 100vh;
+    background: linear-gradient(0deg, rgb(155, 108, 108) 0%, rgba(0,0,0,1) 100%);
     z-index: 1;
 }
 
-/* main container */
-body .main_container{
-    height: 100vh;
-    width:100vw;
-    background: linear-gradient(0deg, rgba(41,41,41,1) 0%, rgba(0,0,0,1) 100%);
-    z-index: 6;
-}
-
-/* all project work container */
-body .work_container{
-    width: 100vw;
-}
-
-/* blocks below relate to the formatting of the name div */
-
-body .name-wrap {
-    filter: drop-shadow(-1px 2px 4px rgb(0, 0, 0));
-}
-
-body .name {
-    position: relative;
-    display: table;
-    background: black;
-    top: 140px;
-    height: 140px;
-    width: 75%;
-    clear:both;
-    clip-path: polygon(8% 0%, 100% 0%, 92% 100%, 0% 100%);
-    margin: 0 auto;
-    
-}
-
-body .name .name_text {
-    display: table;
-    height:100%;
-    width: 75%;
-    margin: 0 auto;
-}
-
-body .name .name_text p {
-    display: table-cell;
-    color: white;
-    text-align: center;
-    vertical-align: middle;
+/* name/title */
+body .title{
+    z-index: 1;
+    position: absolute;
+    color:white;
+    width:1000px;
+    max-width: 80%;
+    height:100px;
     font-size: 50pt;
+    margin-top: 10%;
+    margin-left: 10%;
+    font-family: "TitilliumWeb-SemiBold";
     user-select: none;
+}
+body .title > p:nth-child(2){
+    font-size: 30pt;
+    margin-top: -40px;
+    font-family: "TitilliumWeb-Light";
+    user-select: none;
+}
+
+body {
+	background: #333;
+}
+
+
+
+
+.scroll_div {
+    position: absolute;
+	display: block;
+    margin-left: 50%;
+	height: 50px;
+    bottom: 20px;
+    width: 50px;
+    transform: translateX(-50%);
+}
+
+
+body .scroll_arrows
+{
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: white;  
+    width: 100%;
+    height: 20px;
+    border: none;
+}
+
+.top, .mid, .bot
+{
+    -webkit-animation: mouse-scroll infinite;
+    animation: mouse-scroll infinite;
+    clip-path: polygon(0 0, 50% 80%, 100% 0, 100% 20%, 50% 100%, 0 20%);
+    margin-top: -6px;
+    opacity: 0;
+}
+
+
+@keyframes mouse-scroll {
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
 }
 
 /* blocks below relate to the formatting of the about me section */
 
 body .about {
     position: relative;
-    display: table;
-    top: 200px;
     height: 470px;
+    width: 100%;
+    overflow: hidden;
+    background: linear-gradient(0deg, rgb(54, 0, 0) 0%, rgba(0,0,0,1) 61%, rgba(129,90,90,1) 62%, rgba(155,108,108,1) 100%);
+    box-shadow: 0px 14px 20px -15px rgba(0,0,0,0.65);
+}
+
+body .about div{
+    display: table;
+    height: 90%;
     width: 80%;
     clear:both;
     margin: 0 auto;
     text-align: center;
     overflow: hidden;
+    background: black;
+    border-radius: 30px;
+    box-shadow: 0px 5px 11px 2px rgba(0,0,0,0.65);
+    margin-top: 10px;
 }
 
 body .about p {
     position: relative;
     display: table-row;
     color: white;
-    top: 50px;
     font-size: 22pt;
     user-select: none;
-    width: 70%;
     margin: auto;
 }
 
-body .about p:nth-child(2) {
-    top: 70px;
-}
-
-body .about div {
-    position: relative;
-    background-color: #FFFFFF;
+body .about div p {
     top: 50px;
-    width: 150px;
-    height: 150px;
-    clip-path: polygon(98% 71%, 50% 95%, 2% 71%, 0 75%, 50% 100%, 100% 75%);
-    margin: 0 auto;
+    font-family: "TitilliumWeb-SemiBold";
 }
 
-
-body .about div:nth-child(4) {
-    top: -80px;
+body .about div > div p {
+    top: 30px;
+    font-family: "TitilliumWeb-Regular";
 }
 
-/* separating project displays */
-body .divider_one {
-    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(41,41,41,1) 100%);
-    position: relative;
-    width:100vw;
-    height: 400px;
-    z-index: -1;
-}
+/* main project section */
 
-body .divider {
-    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(17,17,17,1) 50%, rgba(0,0,0,1) 100%);
-    position: relative;
+body .main_proj_section {
+    overflow: hidden;
     width:100%;
-    height: 200px;
+    background-color: rgb(255, 249, 249);
 }
 
-/* container for the entire project display */
-body .proj_container {
+/* project card */
+
+body .proj_container_wrapper{
     position: relative;
+    margin-top: 50px;
+    width:100%;
+    height: 40vw;
+}
+
+
+body .proj_container_wrapper a{
+    display:block;
+    overflow:auto;
+    width:98%;
+    height: 98%;
+    border-radius: 10px;
+    margin: 0 auto;
+    transition: ease .3s;
+    box-shadow: 0px 3px 11px 2px rgba(0,0,0,0.65);
+    text-decoration: none;
+}
+
+body .proj_container_wrapper a:hover{
+    width:100%;
+    height:100%;
+    transition: ease .3s;
+    text-decoration: none;
+}
+
+body .proj_container{
+    display:flex;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+}
+
+body .img_container{
+    width: 80%;
+    height: 100%;
+    background-size: cover;
+}
+
+/* project images */
+
+body .imga{
+    background-image: url("images/melodydb.png");
+}
+
+body .imgb{
+    background-image: url("images/selectiverepeat.png");
+}
+
+body .imgc{
+    background-image: url("images/iw.png");
+}
+
+body .imgd{
+    background-image: url("images/nooks.png");
+}
+
+/* project card text section */
+
+body .text_container{
     display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
-    width: 100%;
-    height: auto;
-    background-color: black;
-}
-
-/* container for the entire image div including the slides */
-body .proj_container .img_container{
-    flex: 1;
     width: 50%;
-    position: relative;
-    overflow: hidden;
-}
-
-/* container for all project image slides */
-body .proj_container .img_container .slides_container{
-    width: 400%;
     height: 100%;
-    overflow: hidden;
-    display:flex;
-    transition: 0.6s;
+    background-color: white;
 }
 
-/* project image slide */
-body .proj_container .img_container .slides_container .slide{
-    transition: 0.6s;
-    width:25%;
-}
-
-/* project image */
-body .proj_container .img_container .slides_container .proj_img{
+body .proj_description{
+    height: 35%;
     width: 100%;
-    height: auto;
-    object-fit: contain;
-    overflow: hidden;
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-/* project text container */
-body .proj_container .proj_txt {
-    flex: 1;
     background-color: black;
-    width: 50%;
-    user-select: none;
-    text-align: center;
-    overflow: hidden;
     color: white;
+    text-align: center;
 }
 
-/* project title in the project container */
-body .proj_container .proj_txt h1{
-    position: relative;
-    width:100%;
-    top: 14px;
+body .proj_description header{
+    font-family: "TitilliumWeb-Bold";
+    font-size: 2vw;
+    margin-top: 2%;
 }
 
-/* icon for the language used for the project */
-body .proj_container .proj_txt .language_img{
-    position: relative;
-    width: 8%;
-    top: 1%;
-    background-color: black;
-    height: auto;
-}
-
-/* github for the project */
-body .proj_container .proj_txt .proj_git{
-    position: absolute;
-    height: 10%;
-    bottom: 10px;
-    transform: translate(-50%);
-}
-
-
-body .proj_container .proj_txt p{
-    position: relative;
-    width:75%;
-    top: 1%;
+body .proj_description p{
+    font-family: "TitilliumWeb-Light";
+    font-size: 1.5vw;
+    max-width: 95%;
     margin: 0 auto;
 }
 
-/* left and right arrow buttons on image containers*/
-body .prev, .next{
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 40px;
-    width: auto;
-    padding: 10px;
-    user-select: none;
-    color: rgb(172, 172, 172);
-    border-width: 1px;
-    transition: 0.6s ease;
-    text-decoration: none;
-    border-radius: 10px;
-}
-/* hover style for left and right arrow buttons on image containers*/
-body .prev:hover, .next:hover{
-    background:rgba(31, 39, 39, 0.5);
-    color: #00FFFF;
-}
-
-/* margins for left and right arrow buttons on image containers*/
-body .proj_container .img_container .prev{
-    left: 1%;
-}
-body .proj_container .img_container .next{
-    right: 1%;
-}
-
-/* image navigation bar (container for circles)*/
-body .proj_container .img_container .slides_container .img_nav{
-    height: 3%;
-    width: 10%;
-    position: absolute;
-    bottom: 6%;
-    left: 50%;
-    transform: translate(-50%);
+body .proj_tech{
     display: flex;
-}
-
-/* navigation bar circle */
-body .circle{
-    height: 100%;
-    width: 45%;
-    background-color: #FFFFFF;
-    border-radius: 50%;
-    margin: 8%;
-    box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.58);
-    cursor: pointer;
-}
-
-/* cyan coloring on hover for navigation circle */
-body .circle:hover{
-    background:#00FFFF;
-}
-
-/* hide the original radio input buttons */
-input[name="r"], input[name="r2"], input[name="r3"], input[name="r4"]{
-    position:absolute;
-    visibility: hidden;
-}
-
-/* baby blue color for when circle is selected */
-
-#r0:checked ~ .img_container .img_nav label:nth-child(1),
-#r3:checked ~ .img_container .img_nav label:nth-child(1),
-#r6:checked ~ .img_container .img_nav label:nth-child(1),
-#r9:checked ~ .img_container .img_nav label:nth-child(1) {
-    background-color: #c4e9ff;
-    cursor: default;
-}
-
-#r1:checked ~ .img_container .img_nav label:nth-child(2),
-#r4:checked ~ .img_container .img_nav label:nth-child(2),
-#r7:checked ~ .img_container .img_nav label:nth-child(2),
-#r10:checked ~ .img_container .img_nav label:nth-child(2){
-    background-color: #c4e9ff;
-    cursor: default;
-}
-
-#r2:checked ~ .img_container .img_nav label:nth-child(3),
-#r5:checked ~ .img_container .img_nav label:nth-child(3),
-#r8:checked ~ .img_container .img_nav label:nth-child(3),
-#r11:checked ~ .img_container .img_nav label:nth-child(3){
-    background-color: #c4e9ff;
-    cursor: default;
-}
-
-/* end circle color */
-
-/* sliding for images inside project containers */
-
-/* project 1 */
-#r0:checked ~ .img_container .s0{
-    margin-left: 0;
-}
-
-#r1:checked ~ .img_container .s0{
-    margin-left: -25%;
-}
-
-#r2:checked ~ .img_container .s0{
-    margin-left: -50%;
-}
-
-/* project 2 */
-#r3:checked ~ .img_container .s4{
-    margin-left: 0;
-}
-
-#r4:checked ~ .img_container .s4{
-    margin-left: -25%;
-}
-
-#r5:checked ~ .img_container .s4{
-    margin-left: -50%;
-}
-
-/* project 3 */
-#r6:checked ~ .img_container .s8{
-    margin-left: 0;
-}
-
-#r7:checked ~ .img_container .s8{
-    margin-left: -25%;
-}
-
-#r8:checked ~ .img_container .s8{
-    margin-left: -50%;
-}
-
-/* project 4 */
-#r9:checked ~ .img_container .s12{
-    margin-left: 0;
-}
-
-#r10:checked ~ .img_container .s12{
-    margin-left: -25%;
-}
-
-#r11:checked ~ .img_container .s12{
-    margin-left: -50%;
-}
-
-
-.footer{
-    background: linear-gradient(0deg, rgba(13,0,91,1) 0%, rgba(0,0,0,1) 100%);
+    flex-direction: column;
+    height: 65%;
     width: 100%;
-    height: 200px;
+}
+
+body .proj_sw, .proj_apis{
+    height: 50%;
+    width: 100%;
+    overflow: hidden;
+}
+
+body .proj_sw, .proj_apis{
+    color: black;
+    text-align: center;
+}
+
+body .proj_sw header, .proj_apis header{
+    font-family: "TitilliumWeb-SemiBold";
+    font-size: 2vw;
+    margin-top: 2%;
+}
+
+body .technologies, .apis{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 10px;
+    width: 100%;
+    height: 80%;
+}
+
+body .technologies{
+    margin-top: 10px;
+}
+
+body .apis{
+    margin-top: -10px;
+}
+
+
+body .python_tech, .flask_tech, .psql_tech, .rails_tech, .java_tech, .c_tech, .html_tech, .css_tech, .js_tech, .android_tech, .sqlite_tech{
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 50%;
+    width: 15%;
+}
+
+body .spotify_api, .darksky_api, .maps_api{
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 60%;
+    width: 30%;
+}
+
+
+/* icons for technologies and apis */
+
+body .python_tech{
+    background-image: url("images/python_icon.png");
+}
+
+body .rails_tech{
+    background-image: url("images/rails_icon.png");
+}
+
+body .java_tech{
+    background-image: url("images/java_icon.png");
+}
+
+body .c_tech{
+    background-image: url("images/c_icon.png");
+}
+
+body .psql_tech{
+    background-image: url("images/psql_icon.png");
+}
+
+body .flask_tech{
+    background-image: url("images/flask_icon.png");
+}
+
+body .html_tech{
+    background-image: url("images/html_icon.png");
+}
+
+body .css_tech{
+    background-image: url("images/css_icon.png");
+}
+
+body .js_tech{
+    background-image: url("images/js_icon.png");
+}
+
+body .sqlite_tech{
+    background-image: url("images/sqlite_icon.png");
+}
+
+body .android_tech{
+    background-image: url("images/android_icon.png");
+}
+
+body .spotify_api{
+    background-image: url("images/spotify_icon.png");
+}
+
+body .darksky_api{
+    background-image: url("images/darksky_icon.png");
+}
+
+body .maps_api{
+    background-image: url("images/maps_icon.png");
+}
+
+
+/* footer */
+body .footer{
+    margin-top: 5vw;
+    height: 16vw;
+    width:100%;
+    background: linear-gradient(0deg,  rgba(54, 0, 0, 1) 0%, rgba(0,0,0,1) 100%);
+    box-shadow: 0px 3px 11px 2px rgba(0,0,0,0.65);
+    text-align: center;
     color: white;
+}
+
+body .footer p{
+    position: relative;
+    top: 10px;
+}
+
+body .footer a{
+    color:#D4AF37;
 }
